@@ -1,5 +1,8 @@
 2019-06-10  Jason Merrill  <jason@redhat.com>
 
+	* constexpr.c (free_constructor): New.
+	(cxx_eval_call_expression): Free parameter value CONSTRUCTORs.
+
 	* constexpr.c (unshare_constructor): Only unshare if T is itself a
 	CONSTRUCTOR.
 	(cxx_eval_call_expression): Don't call it on the result here.
